# syllables-table

./: .gitignore  README.md  syllables-table.cabal  syllables.html
app/: Main.hs
